--- a/package.json
+++ b/package.json
@@ -3,9 +3,22 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "bun --hot src/server.ts",
+    "start": "bun src/server.ts",
+    "build": "bun build src/server.ts --outdir ./dist --target bun",
+    "prisma:generate": "bunx prisma generate",
+    "prisma:migrate": "bunx prisma migrate dev",
+    "prisma:deploy": "bunx prisma migrate deploy",
+    "prisma:studio": "bunx prisma studio",
+    "test": "bun test",
+    "lint": "bunx eslint src/**/*.ts"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/pg": "^8.16.0",
+    "bun-types": "^1.3.5",
+    "eslint": "^9.39.2",
     "prisma": "^7.2.0"
   },
   "peerDependencies": {
