--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,13 +7,19 @@
     "moduleDetection": "force",
     "jsx": "react-jsx",
     "allowJs": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"]
+    },
 
     // Bundler mode
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
-
+    "types": ["bun-types"],
     // Best practices
     "strict": true,
     "skipLibCheck": true,
@@ -25,5 +31,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
-  }
+  },
+  "includes": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
