--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quikly",
-  "module": "index.ts",
+  "module": "src/server.ts",
   "type": "module",
   "private": true,
   "scripts": {
@@ -12,9 +12,11 @@
     "prisma:deploy": "bunx prisma migrate deploy",
     "prisma:studio": "bunx prisma studio",
     "test": "bun test",
-    "lint": "bunx eslint src/**/*.ts"
+    "lint": "bunx eslint src/**/*.ts",
+    "postinstall": "prisma generate"
   },
   "devDependencies": {
+    "@prisma/adapter-neon": "^7.2.0",
     "@types/bun": "latest",
     "@types/pg": "^8.16.0",
     "bun-types": "^1.3.5",
@@ -22,14 +24,12 @@
     "prisma": "^7.2.0"
   },
   "peerDependencies": {
-    "typescript": "^5"
+    "typescript": "^5.9.3"
   },
   "dependencies": {
-    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "dotenv": "^17.2.3",
     "hono": "^4.11.1",
-    "pg": "^8.16.3",
     "redis": "^5.10.0",
     "uuid": "^13.0.0"
   }
